--- a/index.html
+++ b/index.html
@@ -1,33 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Cafe magazine</title>
-    <link rel="stylesheet" href="CSS/styles.css">
-</head>
-<body id="main" class="main">
+    <link rel="stylesheet" href="CSS/styles.css" />
+  </head>
+  <body id="main" class="main">
     <header class="header">
-        <nav class="navegacion">
-            <a href="#" class="anclaLogo">
-               <i class=""></i>
-            </a>
-               <span>Cafe Racer Magazine</span> 
-               <ul class="listaNav">
-                <li class="listaItem"><a href="#" class="linkNav">Tendencias</a></li>
-                <li class="listaItem"><a href="#" class="linkNav">Registrarse</a></li>
-                <li class="listaItem"><a href="#" class="linkNav iniciarSesion">Iniciar sesion</a></li>
-               </ul>
-            
-        </nav>
+      <nav class="navegacion">
+        <span class="tituloHeader">Cafe Racer Magazine</span>
+        <ul class="listaNav">
+          <li class="listaItem"><a href="#" class="linkNav">Tendencias</a></li>
+          <li class="listaItem"><a href="#" class="linkNav">Registrarse</a></li>
+          <li class="listaItem">
+            <a href="#" class="linkNav iniciarSesion">Iniciar sesion</a>
+          </li>
+        </ul>
+      </nav>
     </header>
 
+    <section class="sectionPrincipal">
+      <h1 class="tituloPrincipal">La web de custom por excelencia</h1>
+      <br />
+      <h2 class="subtituloPrincipal">
+        El lugar donde el arte se combina con la velocidad
+      </h2>
+      <br />
+      <a class="botonRegistrarse" href="#">Registrarse</a>
+    </section>
 
-    <section>
-    <h1 class="tituloPrincipal">La web de custom por excelencia</h1>
-    <h1 class="subtituloPrincipal">Un lugar donde el arte se combina con la velocidad</h1>
-    <a href="">Registrarse</a>
+    <section class="buscadorPrincipal">
 
-</section>
-</body>
+        <h2 class="tituloSection">Busca una marca o modelo</h2>
+        <form class="buscadorMotos">
+            <input class="inputBuscador" type="text" placeholder="Buscar..."> 
+            <input class="botonBuscador" type="submit" value="Buscar">
+        </form>
+
+    </section>
+  </body>
 </html>
